--- a/styles/styles.css
+++ b/styles/styles.css
@@ -90,6 +90,7 @@ svg.mapSVG {
   position: absolute;
   text-align: center;
   float: right;
+  border-radius:10px;
   margin-top: 5%;
   margin-bottom: 5%;
   margin-left: 70%;
