--- a/styles/legend.css
+++ b/styles/legend.css
@@ -2,7 +2,7 @@
   position: absolute;
   text-align: left;
   float: right;
-  left: 70%;
+  right: 5%;
   bottom: 5%;
   padding: 2%;
   background-color: rgba(255, 255, 255, 0.164);
